--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ jupyter-client==7.1.0
 jupyter-core==4.9.1
 lxml==4.7.1
 matplotlib-inline==0.1.3
+mysql-connector==2.2.9
 nest-asyncio==1.5.4
 numpy==1.21.5
 pandas==1.3.5
