--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ DateTime==4.3
 debugpy==1.5.1
 decorator==5.1.0
 entrypoints==0.3
+greenlet==1.1.2
 idna==3.3
 ipykernel==6.6.0
 ipython==7.30.1
@@ -15,7 +16,7 @@ jupyter-client==7.1.0
 jupyter-core==4.9.1
 lxml==4.7.1
 matplotlib-inline==0.1.3
-mysql-connector==2.2.9
+mysql-connector-python==8.0.27
 nest-asyncio==1.5.4
 numpy==1.21.5
 pandas==1.3.5
@@ -24,8 +25,10 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.24
+protobuf==3.19.1
 ptyprocess==0.7.0
 Pygments==2.10.0
+PyMySQL==1.0.2
 python-dateutil==2.8.2
 pytz==2021.3
 pyzmq==22.3.0
@@ -33,6 +36,7 @@ requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.3
 six==1.16.0
+SQLAlchemy==1.4.29
 threadpoolctl==3.0.0
 tornado==6.1
 traitlets==5.1.1
